# 2dcv

./: .gitignore  README.md  requirements.txt
1.Aufgabe/: aufgabe1.ipynb
2.Aufgabe/: aufgabe2.ipynb
3.Aufgabe/: aufgabe3-1.ipynb
4.Aufgabe/: CMakeLists.txt  Makefile  aufgabe_4.ipynb  sobel.py  sobel_demo.cpp  sobel_demo.py
task-1/: task-1.ipynb
task-2/: task-2.ipynb
task-3/: task3.ipynb
